--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,9 @@
 
     // Environment Settings
     // See also https://aka.ms/tsconfig/module
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
+    //"module": "NodeNext",
+    "moduleResolution": "node",
+    "allowSyntheticDefaultImports": true,
     "target": "es2022",
     "types": [],
     // For nodejs:
