--- a/package.json
+++ b/package.json
@@ -9,15 +9,20 @@
   },
   "keywords": [],
   "author": "",
-  
   "license": "ISC",
   "type": "module",
   "devDependencies": {
     "@types/express": "^5.0.6",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
+    "swagger-ui-express": "^5.0.1",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   },
   "dependencies": {
-    "express": "^5.2.1"
+    "express": "^5.2.1",
+    "sequelize": "^6.37.7",
+    "sqlite3": "^5.1.7",
+    "swagger-jsdoc": "^6.2.8"
   }
 }
